fix(core): EntityResolvers.types() preserves insertion order (was Map.copyOf, JVM-randomized)
Map.copyOf returns an immutable map whose iteration order is unspecified and
randomized per JVM process (ImmutableCollections.SALT32L), so types() returned
keys in a different order on different runs. This made MultiTypeQuickStartTest
flaky (asserts "Known types: [customer, vehicle]") and silently lost the
intended insertion-order guarantee.

Wrap the already-built LinkedHashMap in Collections.unmodifiableMap instead, so
types()/toString() follow insertion order deterministically. The internal map
stays private and is only read, so the class remains effectively immutable; the
defensive copy and blank-key/null-resolver guards are unchanged.

Tests assert insertion order with containsExactly, including a reversed-order
case that would fail under the old SALT32L-randomized backing map.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>